Client: Check for shell integration when initializing platform plugin

This makes QWaylandDisplay::initialize return a boolean and moves the
QWaylandIntegration's failure check out of constructor as
QWaylandIntegration::shellIntegration is a virtual method, this also
removes the out-of-date comments about processEvents as it's no more
used in QWaylandDisplay::forceRoundTrip.

Fixes: QTBUG-102457
Change-Id: I3c8f1d9fd195326b587b45318443c2beee1ebfc2
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit 2eb17abf4262b467140ed4262320bf60cbda3ba2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>