src/client/qwaylanddisplay_p.h
@@ -97,7 +97,7 @@ public:
     QWaylandDisplay(QWaylandIntegration *waylandIntegration);
     ~QWaylandDisplay(void) override;
 
-    void initialize();
+    bool initialize();
 
 #if QT_CONFIG(xkbcommon)
     struct xkb_context *xkbContext() const { return mXkbContext.get(); }
